[package]
name = "wz_reader"
description = "A wz file reader to resolve wz file with thread safe"
readme = "README.md"
homepage = "https://github.com/spd789562/wz-reader-rs"
repository = "https://github.com/spd789562/wz-reader-rs"
documentation = "https://docs.rs/wz_reader"
categories = ["parsing"]
keywords = ["wz", "maplestory", "wzlib"]
version = "0.0.4"
edition = "2021"
license-file = "LICENSE.txt"

[dependencies]
aes = "0.8.4"
ecb = "0.1.2"
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
hashbrown = "0.14.3"
image = { version = "0.25.0", features = ["rayon"] }
memmap2 = "0.9.4"
rayon = "1.9.0"
scroll = "0.12.0"
thiserror = "1.0.57"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "bench_main"
harness = false