[package]
name = "wz_reader"
description = "A wz file reader to resolve wz file with thread safe"
readme = "README.md"
homepage = "https://github.com/spd789562/wz-reader-rs"
repository = "https://github.com/spd789562/wz-reader-rs"
documentation = "https://docs.rs/wz_reader"
categories = ["parsing"]
keywords = ["wz", "maplestory", "wzlib"]
version = "0.0.14"
edition = "2021"
license-file = "LICENSE.txt"

[dependencies]
aes = "0.8.4"
ecb = "0.1.2"
flate2 = { version = "1.0.28", default-features = false }
hashbrown = "0.14.3"
image = { version = "0.25.0", default-features = false }
memmap2 = "0.9.4"
rayon = { version = "1.9.0", optional = true }
scroll = "0.12.0"
thiserror = "1.0.57"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
c2-chacha = "0.3.3"

[dev-dependencies]
serde_json = { version = "1.0" }
tempfile = "3"
criterion = "0.5"
axum = "0.7.5"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["rayon", "zlib-ng"]
json = ["serde", "dep:serde_json"]
serde = ["dep:serde", "hashbrown/serde"]
rayon = ["dep:rayon", "image/rayon"]
zlib-ng = ["flate2/zlib-ng"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "with_axum"
required-features = ["json", "image/default-formats"]

[[example]]
name = "wz_to_json"
required-features = ["json"]

[[example]]
name = "parse_single_img_file"
required-features = ["image/png"]

[[example]]
name = "extracting_pngs"
required-features = ["image/png"]
